--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
               </li>
               <li><a href="https://www.instagram.com/_sushank22_" rel="noopener" class="fab fa-instagram"></a></li>
               <li><a href="https://www.linkedin.com/in/sushank-chandel-23a656252?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" rel="noopener" class="fab fa-linkedin"></a></li>
-              <li><a href="#" rel="noopener" class="fab fa-youtube"></a></li>
+              <!-- <li><a href="#" rel="noopener" class="fab fa-youtube"></a></li> -->
             </ul>
 
             
